fixed leaks, better logging, memory command